[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Brinkmann"
]
description = "A set of drivers for writing bare-metal code for the Freescale Kinetis KE06Z."
homepage = "https://github.com/thejpster/lm4f120"
keywords = ["arm", "bare-metal", "blink", "ke06z"]
license = "MIT"
name = "ke06z"
version = "0.1.0"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
lto = true

[dependencies]
cortex-m = "0.1.4"
volatile-register = "0.1.2"
embedded-serial = "0.3.0"
