[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Andrew Straw <strawman@astraw.com>",
	"Marc Brinkmann"
]
description = "A set of drivers for writing bare-metal code for the Texas Instruments LM4F120."
repository = "https://github.com/thejpster/lm4f120"
keywords = ["arm", "bare-metal", "blink", "lm4f120"]
license = "MIT"
name = "lm4f120"
version = "0.5.0"
homepage = "https://www.thejpster.org.uk"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
lto = true

[dependencies]
cortex-m = "0.2.7"
volatile-register = "0.2.0"
embedded-serial = "0.5.0"
tm4c123x = "0.4.0"

[dependencies.lazy_static]
version = "^0.2"
features = ["spin_no_std"]
