[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Andrew Straw <strawman@astraw.com>",
	"Marc Brinkmann"
]
description = "A set of drivers for writing bare-metal code for the Texas Instruments LM4F120."
repository = "https://github.com/thejpster/lm4f120"
keywords = ["arm", "bare-metal", "blink", "lm4f120"]
license = "MIT"
name = "lm4f120"
version = "0.10.0"
homepage = "https://www.thejpster.org.uk"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"
#incremental = false
#codegen-units = 1

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
#incremental = false
#codegen-units = 1

[dependencies]
cortex-m = "0.4"
volatile-register = "0.2"
tm4c123x = "0.6"
nb = "0.1.1"

[dependencies.lazy_static]
version = "^0.2"
features = ["spin_no_std"]

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]
